# angrydriver

./: autobahn_simulator.py  car_1.xcf  car_flash.xcf  pyproject.toml  run_game.py
src/angrydriver/: __init__.py  backend.py  eventloop.py  hardware.py
