[project]
name = "angrydriver"
version = "0.1.0"
description = "Hackathon"
readme = "README.md"
authors = [
    { name = "Jan Ullmann", email = "102742052+ullmannJan@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = ["pygame",
                "numpy"]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
